Add json serialization for alfred to read

--- a/package.yaml
+++ b/package.yaml
@@ -23,6 +23,8 @@ dependencies:
 - base >= 4.7 && < 4.13
 - sqlite-simple
 - text
+- raw-strings-qq
+- neat-interpolation
 
 library:
   source-dirs: src
